# ecs_inheritance_patterns

./: .gitignore  Cargo.toml  README.md  main.rs  pet_module.rs
pet_module/: pet_state.rs
src/: lib.rs  main.rs  pet_module.rs
src/pet_module/: pet_state.rs
